# openapi-mcp-bridge

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  RESTFUL_FIX_REPORT.md  TROUBLESHOOTING.md  analyze_tools.py  api_docs_temp.json  claude-desktop-config-alt.json  claude-desktop-config.json  example-openapi.json  release.sh  test_mcp.json  test_request_body.py  test_request_body_full.py
.github/workflows/: release.yml
src/: config.rs  lib.rs  main.rs  openapi.rs  state.rs  tools.rs
