[package]
name = "openapi-mcp-bridge"
version = "0.0.0"
edition = "2021"

[dependencies]
rmcp = { version = "0.8", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.12", features = ["json"] }
openapiv3 = "2.0"
serde_yaml = "0.9.34-deprecated"

[[bin]]
name = "openapi-mcp-bridge"
path = "src/main.rs"
